autokey-gtk (0.61.0-0~jaunty) jaunty; urgency=low

  * Add mouse click recording and playback capabilities
  * Rework record functionality to work as a full macro facility
  * Add ability to view tracebacks from script errors in GUI
  * Change sample scripts so they work on GTK and KDE versions
  * Handle scenario where xlib record module is not available
  * Don't undo last expansion if the mouse has been clicked

 -- Chris Dekter <cdekter@gmail.com>  Mon, 26 Oct 2009 10:38:05 +1000

autokey-gtk (0.60.7a-0~jaunty) jaunty; urgency=low

  * Fix a few issues with window scripting library
  
 -- Chris Dekter <cdekter@gmail.com>  Tue, 20 Oct 2009 10:38:05 +1000

autokey-gtk (0.60.7-0~jaunty) jaunty; urgency=low

  * Add window management capabilities to scripting API
  * Add option to start automatically at login
  * Fix Save menu item being available when it should not be  
  * Remove New Top Level Folder from context menu
  * Add keyboard shortcuts for common config window actions (undo, redo, new)
  * New top-level folder is always enabled (even when a folder is not selected)
  * Remove unnecessary spacing from main window
  * Spacing tweaks to Advanced Settings dialog
  * Fix bug where keyboard was sometimes lost after resume from S3
  * Flush event buffer after executing keyboard events from a script

 -- Chris Dekter <cdekter@gmail.com>  Mon, 19 Oct 2009 12:38:05 +1000

autokey-gtk (0.60.6-0~jaunty) jaunty; urgency=low

  * Implement GTK version of new UI using Glade extensively

 -- Chris Dekter <cdekter@gmail.com>  Wed, 30 Sep 2009 12:38:05 +1000

autokey (0.60.5-0~jaunty) jaunty; urgency=low

  * Change to using pickle instead of cPickle due to a bug in the latter
  * Bring in changes to common modules needed for GTK version
  * Fix design flaw in pickle error trapping code
  * Fix <enter> not being sent at the end of unicode char entry
  * Fix service crashing when undoing an expansion with backspace
  * Use Phrase instead of Script in some nogui functions
