@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <!DOCTYPE glade-interface SYSTEM "glade-2.0.dtd">
-<!--Generated with glade3 3.4.5 on Fri Oct 30 12:54:26 2009 -->
+<!--Generated with glade3 3.4.5 on Fri Oct 30 16:24:33 2009 -->
 <glade-interface>
   <widget class="GtkDialog" id="recorddialog">
     <property name="border_width">5</property>
@@ -17,7 +17,6 @@
         <child>
           <widget class="GtkVBox" id="vbox1">
             <property name="visible">True</property>
-            <property name="spacing">2</property>
             <child>
               <widget class="GtkLabel" id="label1">
                 <property name="visible">True</property>
@@ -25,6 +24,9 @@
                 <property name="label" translatable="yes">&lt;b&gt;Record a keyboard/mouse macro&lt;/b&gt;</property>
                 <property name="use_markup">True</property>
               </widget>
+              <packing>
+                <property name="padding">5</property>
+              </packing>
             </child>
             <child>
               <widget class="GtkCheckButton" id="keyboardButton">
@@ -91,6 +93,7 @@
               </widget>
               <packing>
                 <property name="expand">False</property>
+                <property name="padding">5</property>
                 <property name="position">3</property>
               </packing>
             </child>
